different feeling of force layout. collision + cluster  instead of charge- should fix bubble misalignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -6,19 +6,18 @@
 
 
   .cat_wrapper{
-    min-width: 300px;
     display:inline-block;
   }
 
   .categories{
-    width:90%;
-    padding: 20px;
-    margin: 0 20px;
-    height: 400px;
+    width:300px;
+    height: 300px;
+   padding: 20px 0;
+/*    margin: 0 20px;
+*/    
     overflow:hidden;
     text-overflow:ellipsis;
     text-align:center;
-    font-family: Typo Slab Serif Light;
     font-size:10px ;
     color: rgb(152,151,150);
     border: solid 2px transparent;
